# shadowguy

./: CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: tests.yml
src/shadowguy/: __init__.py  app.py  archetypes.py  character.py  checks.py  combat.py  content.py  corp_turn.py  corpmap.py  cybernetics.py  encounters.py  factions.py  fixer.py  gangs.py  gigs.py  jobs.py  matrix.py  relations.py  rivals.py  runners.py  saves.py  scene.py  security.py  shops.py  skills.py  surveillance.py  tactical.py
src/shadowguy/screens/: __init__.py  burglary_screens.py  combat_screen.py  corp_map_screen.py  corp_screen.py  creation_screen.py  info_screens.py  main_menu.py  matrix_screen.py  menu_screens.py  scene_screen.py  shop_screens.py  tactical_screen.py  technology_screen.py
tests/: test_app_flows.py  test_archetypes.py  test_burglary_gen.py  test_character.py  test_checks.py  test_combat.py  test_corp_turn.py  test_corpmap.py  test_cybernetics.py  test_encounters.py  test_factions.py  test_gigs.py  test_jobs.py  test_matrix.py  test_relations.py  test_rivals.py  test_runners.py  test_security.py  test_shops.py  test_skills.py  test_surveillance.py  test_tactical.py
