[project]
name = "shadowguy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "robertgervais", email = "Bobby" }
]
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.8",
]

[project.scripts]
shadowguy = "shadowguy:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
